# RISC-V-simulator

./: CMakeLists.txt  status.txt
src/: a.out  config.cpp  config.hpp  io.hpp  main.cpp  memory.cpp  memory.hpp  sequential.hpp  utility.cpp  utility.hpp
testcases/: expr.c
